--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="section">
             <h2><span class="emoji">📧</span>Contact Support</h2>
             <div class="contact-info">
-                <p><strong>Email:</strong> <a href="mailto:personalens.support@gmail.com">personalens.support@gmail.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:yakuapps@gmail.com">yakuapps@gmail.com</a></p>
                 <p><strong>Response Time:</strong> Usually within 24 hours</p>
                 <p><strong>Languages:</strong> English, Spanish, French, German, Portuguese</p>
             </div>
